# bertdistiller

./: .gitignore  README.md  distillation.ipynb  pyproject.toml
configs/default/: train_config.json
configs/examples/: custom_dataset.json  mixed_sources.json  wikipedia_books.json
examples/: dataset_basic_usage.py  minilm_distillation.ipynb  minilm_distillation.py  modern_minilm_distillation.py
examples/task_agnostic/: minilmv2.py
examples/task_specific/: classification.py
src/bertdistiller/: __init__.py
src/bertdistiller/distillation/minilm/: __init__.py  modeling.py  trainer.py
src/bertdistiller/evaluation/: __init__.py  evaluation.py  run_glue.py
src/bertdistiller/task_agnostic/: __init__.py
src/bertdistiller/task_agnostic/data/: __init__.py
src/bertdistiller/task_agnostic/evaluation/: __init__.py
src/bertdistiller/task_agnostic/minilm/: __init__.py
src/bertdistiller/task_specific/: __init__.py  args.py  trainer.py
src/bertdistiller/task_specific/data/: __init__.py  dataset.py
src/minilm/config/: __init__.py  data_config.py  model_config.py  parsers.py  training_config.py
src/minilm/data/: __init__.py  utils.py
src/minilm/distillation/minilm/: modeling.py  trainer.py
src/minilm/models/: __init__.py  minilm.py
src/minilm/trainer/: __init__.py  distillation.py
