[tool.poetry]
name = "bertdistiller"
version = "0.1.0"
description = "BERT Distillation"
authors = ["milistu <studen.m98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
datasets = "^3.2.0"
transformers = {extras = ["torch"], version = "^4.48.2"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
